2006-08-15  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	PR c/28649
	* c-parser.c (c_parser_compound_statement_nostart): Reset
	parser->error after each statement.

2006-08-14  Andrew Pinski  <pinskia@gmail.com>

	PR middle-end/28075
	* tree-inline.c (setup_one_parameter): Strip useless
	type conversion before adding it to the IR.
	(declare_return_variable): Likewise.

2006-08-13  Andrew MacLeod  <amacleod@redhat.com>

	PR middle-end/27793
	* tree-dfa.c (add_referenced_var): Assert DECL_UID is unique for
	different decls.

2006-08-13  Jakub Jelinek  <jakub@redhat.com>

	PR c++/28677
	Revert:
	2006-06-06  Andrew MacLeod  <amacleod@redhat.com>
	PR middle-end/27793
	* tree-dfa.c (referenced_vars_dup_list): New.  List of duplicate 
	referenced_variables with matching DECL_UID's.
	(find_referenced_vars): Make sure duplicate list is empty to start.
	(add_referenced_var): Add var to duplicate list if required.
	* tree-ssa.c (delete_tree_ssa): Clear var_ann's on duplicates.
	* tree-flow.h (referenced_vars_dup_list): External declaration.

2006-08-13  Matthias Klose  <doko@debian.org>

	* doc/invoke.texi: Fix spelling errors.

2006-08-11  Eric Botcazou  <ebotcazou@libertysurf.fr>

	PR rtl-optimization/23454
	* reorg.c (relax_delay_slots): Update comment.

2006-08-11  Paolo Bonzini  <bonzini@gnu.org>

	PR target/27827
	* config/i386/i386.md: Add peephole2 to avoid "fld %st"
	instructions.

2006-08-11  Richard Guenther  <rguenther@suse.de>

	PR middle-end/28651
	* simplify-rtx.c (simplify_const_relational_operation):
	Simplify A CMP B to A - B CMP 0 only for EQ and NE comparison
	codes.

2006-08-05  Volker Reichelt  <reichelt@igpm.rwth-aachen.de>

	PR c/27721
	* c-typeck.c (build_modify_expr): Test earlier for non-lvalues.

	PR c/28136
	* c-parser.c (c_parser_postfix_expression_after_paren_type): Robustify.

2006-08-03  Mark Mitchell  <mark@codesourcery.com>

	PR c++/28148
	* varasm.c (output_constant): Give the front end another chance to